<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">


    <ImageView
        android:id="@+id/item_image"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:scaleType="fitXY"
        android:src="@android:drawable/ic_dialog_info" />

    <LinearLayout
        android:id="@+id/linearlayout_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_toEndOf="@+id/item_image"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_item_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_heading_placeholder"
            android:textColor="@color/colorTextBlack"/>

        <TextView
            android:id="@+id/txt_item_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_placeholder"
            android:textSize="10dp"
            android:textColor="@color/colorTextBlack"/>
    </LinearLayout>

    <TextView
        android:id="@+id/feed_euro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/feed_cent"
        android:height="35dp"
        android:gravity="bottom"
        android:text="@string/price_eur_placeholder"
        android:textColor="@color/colorTextBlack"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/feed_cent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:height="35dp"
        android:text="@string/price_cent_placeholder"
        android:gravity="bottom"
        android:textAlignment="textStart"
        android:textColor="@color/colorTextBlack"
        tools:ignore="RtlCompat" />

</RelativeLayout>