<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Neuer_Artikel"
    style="@style/ConstraintLayout_pd">

    <TextView
        android:id="@+id/lbl_new_article_title"
        style="@style/Heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/txt_new_article_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/txt_new_article_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/txt_new_article_name"
        app:layout_constraintTop_toBottomOf="@+id/lbl_new_article_title"
        tools:layout_editor_absoluteX="15dp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/txt_new_article_beschreibung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/txt_new_article_beschreibung"
        app:layout_constraintTop_toBottomOf="@+id/txt_new_article_name"
        tools:layout_editor_absoluteX="15dp"
        android:inputType="text"/>

    <Spinner
        android:id="@+id/txt_new_article_kategorie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_new_article_beschreibung" />

    <EditText
        android:id="@+id/txt_new_article_datum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/txt_new_article_datum"
        app:layout_constraintTop_toBottomOf="@+id/txt_new_article_kategorie"
        tools:layout_editor_absoluteX="15dp"
        android:focusableInTouchMode="false"
        android:inputType="date"/>

    <EditText
        android:id="@+id/txt_new_article_preis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/txt_new_article_preis"
        app:layout_constraintTop_toBottomOf="@+id/txt_new_article_datum"
        tools:layout_editor_absoluteX="15dp"
        android:inputType="numberDecimal"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_new_article_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/check"
        android:focusable="true" />


</android.support.constraint.ConstraintLayout>