<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragZiele">

    <Switch
        android:id="@+id/swt_ziele_track"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/eigene_ausgaben_tracken"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swt_ziele_track"
        android:visibility="gone">

        <TextView
            android:id="@+id/lbl_heading_ziele"
            style="@style/Heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ausgaben_im_monat"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/swt_ziele_track" />

        <TextView
            android:id="@+id/lbl_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/m_rz_2019"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_heading_ziele" />


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:max="200"
            android:progress="120" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0 €" />

            <TextView
                android:id="@+id/lbl_max_limit_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_goal"
                android:textAlignment="textEnd" />

        </LinearLayout>

        <TextView
            android:id="@+id/lbl_max_limit_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/sample_goal_2"
            app:layout_constraintTop_toBottomOf="@+id/swt_ziele_track" />

        <SeekBar
            android:id="@+id/seb_max_limit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>



</android.support.constraint.ConstraintLayout>